# midi-blade

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  requirements.txt
scripts/: test_latency.py  train_crepe.py
src/: BladeDSP.cpp  BladeDSP.h  BladeFilters.h  BladeProcessor.cpp  BladeProcessor.h  DeviceManager.h  GuitarProfile.cpp  GuitarProfile.h  MCPServer.cpp  MCPServer.h  MIDINegotiator.cpp  MIDINegotiator.h  RebornEditor.cpp  RebornEditor.h  RebornParameters.h  UMPConverter.cpp  UMPConverter.h
